Bug 430125 - crash on brush switching
Summary: crash on brush switching
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tagging (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-07 22:42 UTC by til.schmitter
Modified: 2020-12-09 13:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
crashlog (433.40 KB, text/plain)
2020-12-07 22:48 UTC, til.schmitter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description til.schmitter 2020-12-07 22:42:22 UTC
5.0.0-prealpha (git a4ec3b3)
Windows 10

krita crashed when i tried to select a brush in the pop up pallette while the tag that's displayed on the color picker was open on the brush presets docker


STEPS TO REPRODUCE
1. put a brush in the favorites tag
2. open the favorites tag on the "brush presets" docker
3. display the favorites tag on the pop up pallette
4. change to the brush through the pop up pallette (must not be already selected)
Comment 1 Halla Rempt 2020-12-07 22:45:02 UTC
Can you please also attach the contents of %localappdata%\krita-crash.log?
Comment 2 til.schmitter 2020-12-07 22:48:01 UTC
Created attachment 133928 [details]
crashlog
Comment 3 Bug Janitor Service 2020-12-08 04:34:33 UTC
Thanks for your comment!

Automatically switching the status of this bug to REPORTED so that the KDE team
knows that the bug is ready to get confirmed.

In the future you may also do this yourself when providing needed information.
Comment 4 Halla Rempt 2020-12-08 10:44:40 UTC
This is probably the most relevant backtrace:

00007FFEF00F82FE 00000000005FA780 0000000019B18520 00007FFF14E5C840  Qt5Core.dll!0x1d82fe QSortFilterProxyModel::filterAcceptsRow+0x45e
00007FFEF00F83D1 00007FFEF04FA390 00007FFEF00FD61B 0000000000000000  Qt5Core.dll!0x1d83d1 QSortFilterProxyModel::mapToSource+0x11
00007FFEF00F85E5 00007FFEF04FA390 000000006FD084C2 00007FFF14E934D0  Qt5Core.dll!0x1d85e5 QSortFilterProxyModel::data+0xb5
00007FFF14E2EA67 00000000005FA8F8 00007FFF28D51793 000000002686EB80  libkritaresources.dll!0x4ea67 KisTagResourceModel::indexForResource+0xa7
00007FFF14E09561 00007FFEF04FA390 0000000000000001 00000000005FAA10  libkritaresources.dll!0x29561 KisTagFilterResourceProxyModel::indexForResource+0x91
00007FFF11DE71B9 0000000026D5FDB0 000000004000046E 0000000000000000  libkritaresourcewidgets.dll!0x71b9 KisResourceItemChooser::setCurrentResource+0x59
00007FFEDDC6DFA8 00007FFEF01469A0 0000000000000000 00007FFEDDAA7260  libkritaui.dll!0x27dfa8 KisPresetChooser::setCurrentResource+0x38
00007FFEDDC66E97 00000000005FAA58 00007FFE00000010 00007FFF07647110  libkritaui.dll!0x276e97 KisPaintOpPresetsChooserPopup::canvasResourceChanged+0x57
00007FFEDCB82E2D 00000000005FAB48 000000001E781530 000000001ACE18F0  kritapresetdocker.dll!0x2e2d PresetDockerDock::canvasResourceChanged+0x13d
00007FFEDCB8319F 0000000000000000 00000000005FAC70 00000000005FAB40  kritapresetdocker.dll!0x319f PresetDockerDock::qt_static_metacall+0x6f
00007FFEF0148C38 0000000015AECB98 0000000000000000 0000000000000000  Qt5Core.dll!0x228c38 QMetaObject::activate+0x7b8
00007FFF07645F55 0000000000000010 0000000000001778 00007FFEF04FA198  libkritaflake.dll!0xf5f55 KoCanvasResourceProvider::canvasResourceChanged+0x35
00007FFEF0148D3D 0000000012571160 00007FFEF01600A5 00000000005FAF30  Qt5Core.dll!0x228d3d QMetaObject::activate+0x8bd
00007FFF07646035 0000000000001778 0000000000001778 0000000000000000  libkritaflake.dll!0xf6035 KoResourceManager::resourceChanged+0x35
00007FFF07554D14 0000000000000010 00007FFE00001778 00000000005FAE70  libkritaflake.dll!0x4d14 KoResourceManager::notifyResourceChanged+0x14
00007FFF075550E5 0000000020B5C700 0000000000001778 0000000000000000  libkritaflake.dll!0x50e5 KoResourceManager::setResource+0x1c5
00007FFEDDA9E3F8 00000000005FAF30 0000000032B60140 00000000001A0000  libkritaui.dll!0xae3f8 KisCanvasResourceProvider::setPaintOpPreset+0x108
00007FFEDDB30380 000000001E6E6750 00000000005FB0C0 000000001E6E6768  libkritaui.dll!0x140380 KisPaintopBox::setCurrentPaintop+0x260
00007FFEDDB35322 00000000312A2608 00007FFEEFBC1D0D 0000000000000000  libkritaui.dll!0x145322 KisPaintopBox::resourceSelected+0x182
00007FFEDDB64E1C 000000001251BBE0 0000000CEF3E1653 4070800000000000  libkritaui.dll!0x174e1c KisFavoriteResourceManager::slotChangeActivePaintop+0x52c
00007FFEDDE090FB 406307893321C3DF 405E000000000000 4068000000000000  libkritaui.dll!0x4190fb KisFavoriteResourceManager::qt_static_metacall+0x21b
00007FFEF0148C38 0000000020241E00 0000000000000000 3FE0000000000000  Qt5Core.dll!0x228c38 QMetaObject::activate+0x7b8
00007FFEDDDF8A90 0000000015FAA820 00007FFE00000002 00000000323CD6A0  libkritaui.dll!0x408a90 KisPopupPalette::sigChangeActivePaintop+0x30
00007FFEDDB3DB8F 00007FFEEFFB1700 0000001CC67B441A 000000002031DA20  libkritaui.dll!0x14db8f KisPopupPalette::mouseReleaseEvent+0xaf


It's weird and unsettling that the crash happens inside Qt's own code...
Comment 5 Halla Rempt 2020-12-09 13:57:32 UTC
Git commit 92cdba5628d4d54dd977050d9146793b2e29740b by Boudewijn Rempt.
Committed on 09/12/2020 at 13:57.
Pushed by rempt into branch 'master'.

Fix crash on selecting a resource
Related: bug 430181

M  +1    -1    libs/resources/KisResourceModel.cpp
M  +8    -3    libs/resources/KisTagFilterResourceProxyModel.cpp
M  +2    -2    libs/resources/KisTagModel.cpp
M  +1    -1    libs/resources/KisTagResourceModel.cpp

https://invent.kde.org/graphics/krita/commit/92cdba5628d4d54dd977050d9146793b2e29740b