Fix crash on selecting a resource

BUG:430125
BUG:430181